@@ -12220,10 +12220,13 @@ AT_DATA([prog.cob], [
        77  SBIN        PIC S9(8) BINARY.
        77  UNUP        PIC  9(8).
        77  SNUP        PIC S9(8).
+       77  UCHR        BINARY-CHAR UNSIGNED.
+       77  SCHR        BINARY-CHAR SIGNED.
 
        01  TSTREC.
-           05  TSTX PIC X(4) OCCURS 3 TIMES.
-           05  TSTY PIC X(4) OCCURS 3 TIMES.
+           05       PIC X(4) OCCURS 300 TIMES VALUE ZERO.
+           05  TSTX PIC X(4) OCCURS   3 TIMES.
+           05  TSTY PIC X(4) OCCURS 300 TIMES.
 
        PROCEDURE DIVISION.
            MOVE ALL 'A' TO TSTX(1).
@@ -12245,20 +12248,27 @@ AT_DATA([prog.cob], [
       * The following would often core dump
            MOVE 0 TO UBIN.
            DISPLAY "UBIN: " UBIN " is :" TSTY(UBIN) ":" UPON CONSOLE.
-           MOVE 'xxx'   TO TSTY(UBIN).
+           MOVE 'yyy'   TO TSTY(UBIN).
            MOVE 1 TO UBIN.
            DISPLAY "UBIN: " UBIN " is :" TSTY(UBIN) ":" UPON CONSOLE.
+           MOVE 0 TO UCHR.
+           DISPLAY "UCHR: " UCHR " is :" TSTY(UCHR) ":" UPON CONSOLE.
+           MOVE -1 TO SCHR.
+           DISPLAY "SCHR: " SCHR " is :" TSTY(SCHR) ":" UPON CONSOLE.
+           MOVE 'zzz' TO TSTY (129).
+           MOVE 129 TO UCHR.
+           DISPLAY "UCHR: " UCHR " is :" TSTY(UCHR) ":" UPON CONSOLE.
            STOP RUN.
 ])
 
 # Safe run with runtime checks
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog], [1], [],
-[libcob: prog.cob:23: error: subscript of 'TSTY' out of bounds: 0
+[libcob: prog.cob:26: error: subscript of 'TSTY' out of bounds: 0
 ])
 
 # Runtime checks disable, subscript may be zero or even negative
-AT_CHECK([$COBC -x prog.cob -o prog_unsafe], [0], [], [])
+AT_CHECK([$COBC -x -g -fsource-location prog.cob -o prog_unsafe], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog_unsafe], [0],
 [UNUP: 00000000 is :CCCC:
 SNUP: +00000000 is :CCCC:
@@ -12267,6 +12277,9 @@ SBIN: -00000001 is :BBBB:
 SBIN: -00000001 is :xxx :
 UBIN: 00000000 is :CCCC:
 UBIN: 00000001 is :1111:
+UCHR: 000 is :yyy :
+SCHR: -001 is :xxx :
+UCHR: 129 is :zzz :
 ], [])
 
 AT_CLEANUP
